@@ -7,7 +7,6 @@ import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
-import com.ll.eitcharge.domain.chargingStation.chargingStation.dto.ChargingStationSearchResponseDtoWithExecuteTime;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
@@ -21,9 +20,19 @@ import org.springframework.web.util.UriComponentsBuilder;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.ll.eitcharge.domain.charger.charger.entity.Charger;
+import com.ll.eitcharge.domain.charger.charger.entity.ChargerType;
+import com.ll.eitcharge.domain.charger.charger.repository.ChargerRepository;
+import com.ll.eitcharge.domain.chargingStation.chargingStation.dto.ChargerStateDto;
+import com.ll.eitcharge.domain.chargingStation.chargingStation.dto.ChargingStationSearchItemResponseDto;
 import com.ll.eitcharge.domain.chargingStation.chargingStation.dto.ChargingStationSearchResponseDto;
+import com.ll.eitcharge.domain.chargingStation.chargingStation.dto.ChargingStationSearchBaseDistanceResponseDto;
 import com.ll.eitcharge.domain.chargingStation.chargingStation.entity.ChargingStation;
 import com.ll.eitcharge.domain.chargingStation.chargingStation.repository.ChargingStationRepository;
+import com.ll.eitcharge.domain.chargingStation.chargingStation.repository.ChargingStationSearchRepository;
+import com.ll.eitcharge.domain.operatingCompany.operatingCompany.service.OperatingCompanyService;
+import com.ll.eitcharge.domain.region.regionDetail.service.RegionDetailService;
+import com.ll.eitcharge.domain.region.service.RegionService;
 import com.ll.eitcharge.global.exceptions.GlobalException;
 import com.ll.eitcharge.global.rsData.RsData;
 
@@ -33,14 +42,31 @@ import lombok.RequiredArgsConstructor;
 @Transactional
 @RequiredArgsConstructor
 public class ChargingStationService {
-	private final ChargingStationRepository chargingStationRepository;
 	private final ObjectMapper objectMapper;
+	private final RegionService regionService;
+	private final ChargerRepository chargerRepository;
+	private final RegionDetailService regionDetailService;
+	private final OperatingCompanyService operatingCompanyService;
+	private final ChargingStationRepository chargingStationRepository;
+	private final ChargingStationSearchRepository chargingStationSearchRepository;
 
-	public List<ChargingStationSearchResponseDto> findByLatBetweenAndLngBetween(double swLat, double swLng, double neLat, double neLng) {
-		List<ChargingStation> chargingStations = chargingStationRepository.findByLatBetweenAndLngBetween(swLat, neLat, swLng, neLng);
+	// 엔티티 조회용
+	public ChargingStation findById(String id) {
+		return chargingStationRepository.findById(id).orElseThrow(GlobalException.E404::new);
+	}
+
+	// 엔티티 조회용
+	public Optional<ChargingStation> findByIdOptional(String statId) {
+		return chargingStationRepository.findById(statId);
+	}
+
+	public List<ChargingStationSearchResponseDto> findByLatBetweenAndLngBetween(double swLat, double swLng,
+		double neLat, double neLng) {
+		List<ChargingStation> chargingStations = chargingStationRepository.findByLatBetweenAndLngBetween(swLat, neLat,
+			swLng, neLng);
 		return chargingStations.stream()
-				.map(ChargingStationSearchResponseDto::new)
-				.collect(Collectors.toList());
+			.map(ChargingStationSearchResponseDto::new)
+			.toList();
 	}
 
 	public List<ChargingStation> findByReportEditKw(String kw) {
@@ -80,47 +106,75 @@ public class ChargingStationService {
 
 		return rsData;
 	}
-	// 엔티티 조회용
-	public ChargingStation findById(String id) {
-		return chargingStationRepository.findById(id).orElseThrow(GlobalException.E404::new);
+
+	public ChargingStationSearchItemResponseDto getSearchMenuBaseItem() {
+		return new ChargingStationSearchItemResponseDto(
+			regionService.getZcodeList(),
+			regionService.getRegionNameList(),
+			operatingCompanyService.getPrimaryBusiIdList(),
+			operatingCompanyService.getPrimaryBnmList(),
+			ChargerType.values()
+		);
 	}
 
-	// 엔티티 조회용
-	public Optional<ChargingStation> findByIdOptional(String statId) {
-		return chargingStationRepository.findById(statId);
+	public ChargingStationSearchItemResponseDto getSearchMenuRegionDetailItem(String zcode) {
+		return new ChargingStationSearchItemResponseDto(
+			regionDetailService.getZscodeListByZcode(zcode),
+			regionDetailService.getRegionDetailNamesListByZcode(zcode)
+		);
 	}
 
-	public ChargingStationSearchResponseDtoWithExecuteTime search(
-			String limitYn,
-			String parkingFree,
-			String zcode,
-			String zscode,
-			String isPrimary,
-			List<String> busiIds,
-			List<String> chgerTypes,
-			String kw,
-			int page,
-			int pageSize
+	public Page<ChargingStationSearchResponseDto> searchBaseStatNm(
+		String limitYn,
+		String parkingFree,
+		String zcode,
+		String zscode,
+		String isPrimary,
+		List<String> busiIds,
+		List<String> chgerTypes,
+		String kw,
+		int page,
+		int pageSize
 	) {
 		List<Sort.Order> sorts = new ArrayList<>();
-		sorts.add(Sort.Order.desc("statId"));
+		sorts.add(Sort.Order.desc("statNm"));
 		Pageable pageable = PageRequest.of(page - 1, pageSize, Sort.by(sorts));
 
-		long startTime = System.nanoTime();
-		Page<ChargingStation> chargingStations = chargingStationRepository.search(limitYn, parkingFree, zcode, zscode, isPrimary, busiIds, chgerTypes, kw, pageable);
-		long endTime = System.nanoTime();
+		Page<ChargingStation> chargingStations = chargingStationRepository.searchBaseStatNm(limitYn, parkingFree, zcode, zscode,
+			isPrimary, busiIds, chgerTypes, kw, pageable);
 
-		return new ChargingStationSearchResponseDtoWithExecuteTime(
-				calculateExecutionTime(startTime, endTime),
-				chargingStations.map(ChargingStationSearchResponseDto::new));
+		return chargingStations.map(ChargingStationSearchResponseDto::new);
 	}
 
-	// 검색 경과시간 측정(나노 초 단위)
-	private String calculateExecutionTime(long startTime, long endTime) {
-		long executionTimeInNano = endTime - startTime;
-		return String.format("실행 시간 (ns): %d , 실행시간 (ms): %d , 실행시간 : %d 초",
-				executionTimeInNano,
-				executionTimeInNano / 1_000_000,
-				(long) (executionTimeInNano / 1_000_000_000.0));
+	public List<ChargerStateDto> chargerStateSearch(String statId) {
+
+		List<Charger> chargerStates = chargerRepository.findByChargingStationStatId(statId);
+		return chargerStates.stream()
+			.map(ChargerStateDto::new)
+			.collect(Collectors.toList());
+	}
+
+	@Transactional(readOnly = true)
+	public Page<ChargingStationSearchBaseDistanceResponseDto> searchBaseDistance(
+		String stat,
+		String limitYn,
+		String parkingFree,
+		String zcode,
+		String zscode,
+		String isPrimary,
+		List<String> busiIds,
+		List<String> chgerTypes,
+		String kw,
+		int page,
+		int pageSize,
+		double lng,
+		double lat,
+		int range
+	) {
+		Pageable pageable = PageRequest.of(page - 1, pageSize);
+
+		return chargingStationSearchRepository.searchBaseDistance(
+			stat, limitYn, parkingFree, zcode, zscode, isPrimary, busiIds, chgerTypes, kw, lat, lng, range, pageable
+		);
 	}
 }
